Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1036,7 +1036,9 @@
    "outputs": [],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "    x = [d['x'] for d in ]"
+    "    x = [d['x'] for d in data]\n",
+    "    x = [d['y'] for d in data]\n",
+    "    return"
    ]
   },
   {
