--- a/index.ipynb
+++ b/index.ipynb
@@ -1038,7 +1038,7 @@
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "    x = [d['x'] for d in data]\n",
     "    x = [d['y'] for d in data]\n",
-    "    return"
+    "    return dict('x')"
    ]
   },
   {
