Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1031,14 +1031,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-1675213cf3b4>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-1675213cf3b4>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return dict('x': x, 'y': y, 'mode': mode, 'name': name)\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "    x = [d['x'] for d in data]\n",
     "    x = [d['y'] for d in data]\n",
-    "    return dict('x': x, 'y': y, 'mode': )"
+    "    return dict('x': x, 'y': y, 'mode': mode, 'name': name)"
    ]
   },
   {
