--- a/index.ipynb
+++ b/index.ipynb
@@ -1047,7 +1047,7 @@
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "    x = [d['x'] for d in data]\n",
     "    x = [d['y'] for d in data]\n",
-    "    return dict('x' = x, 'y' = y, 'mode' = mode, 'name' = name)"
+    "    return dict(x=x, y=y, 'mode' = mode, 'name' = name)"
    ]
   },
   {
