--- a/index.ipynb
+++ b/index.ipynb
@@ -1136,7 +1136,7 @@
    "source": [
     "# trace0 = build_trace(data)\n",
     "\n",
-    "# trace0 = build_trace(data, 'markers')\n",
+    "trace0 = build_trace(data, 'markers')\n",
     "# trace1 = build_trace(data, 'lines', 'my_trace')\n",
     "# plot({'data':[trace0, trace1]})"
    ]
