--- a/index.ipynb
+++ b/index.ipynb
@@ -2042,7 +2042,7 @@
    "outputs": [],
    "source": [
     "def trace_values(x_values, y_values, mode = 'markers', name=\"data\"):\n",
-    "     return dict(x=)"
+    "     return dict(x=x_values, y=y_values, mode=)"
    ]
   },
   {
